# ProjectX

./: .gitignore  BOUNDARY_MATRIX.md  CODEBASECHECK.md  CONTEXTCHECK_SUMMARY.md  PIPELINE_TEST_VISUAL.md  README.md  README_split.md  READ_CLUSTER_STATS_TERMINAL_EXPLANATION.md  SETUP.md  TESTING.md  agent(oldDontUse).md  architecture1.yaml  communications.txt  contract.md  cudaplan.md  echo_worker.py  gateway.md  ignoreFUTURESTUFF.md  jetson_setup.py  orderofoperations1.md  projectPlan1.txt  recentplan.md  redisMain.py  removable.md  runbook.md  worker.md
buildOutFlow/: FEATURE_PLAN_TEMPLATE.md
contract/: CONTEXT.md  CONTEXTCHECK.md  RECURSIVECONTEXTCHECK.md  __init__.py
gateway/: main.py  (+3 more)
vector_db/: CMakeLists.txt  CONTEXTCHECK.md  INITIAL_CLUSTERING_WALKTHROUGH.md
vector_db/cli/: CONTEXTCHECK.md  main.cpp
vector_db/include/: CONTEXTCHECK.md
vector_db/include/vector_db/: CONTEXTCHECK.md  clustering.hpp  status.hpp  vector_store.hpp
vector_db/src/: CONTEXTCHECK.md  vector_store.cpp
vector_db/src/clustering/: CONTEXTCHECK.md  elbow_search.cpp  id_estimator.cpp  spherical_kmeans_cuda.cu  stability.cpp
vector_db/tests/: CONTEXTCHECK.md  benchmark_phase3.py  smoke_cli.py  smoke_cli_profile.py  test_phase1.cpp
vector_db_v2/: 01_PRODUCT_AND_REQUIREMENTS.md  02_SYSTEM_ARCHITECTURE.md  03_STORAGE_AND_DURABILITY.md  04_INDEXING_AND_SEARCH.md  05_CLUSTERING_PIPELINE.md  06_API_AND_CLI_CONTRACTS.md  07_TESTING_AND_VALIDATION.md  08_ROADMAP_AND_MILESTONES.md  CMakeLists.txt  GLOSSARY.md  M1_IMPLEMENTATION_REPORT.md  README.md  TRACEABILITY_MATRIX.md  buildoder.md
vector_db_v2/cli/: main.cpp
vector_db_v2/include/vector_db/: clustering.hpp  status.hpp  vector_store.hpp
vector_db_v2/scripts/: pipeline_test.py
vector_db_v2/src/: vector_store.cpp
vector_db_v2/tests/: test_m1.cpp
vector_db_v3/: CMakeLists.txt  optimizationimplementation.md  testingimplementation.md
vector_db_v3/.tmp_step4_failfast/: bulk.jsonl
vector_db_v3/.tmp_step6_fail_missing_cli/: result.json
vector_db_v3/.tmp_step6_fail_stage/: result.json
vector_db_v3/.tmp_step6_fail_usage/: result.json
vector_db_v3/.tmp_step6_manifest_fail/: result.json
vector_db_v3/.tmp_step6_postcheck_success/: result.json
vector_db_v3/.tmp_step6_postcheck_usage/: result.json
vector_db_v3/.tmp_step6_success/: result.json
vector_db_v3/cli/: main.cpp
vector_db_v3/contracts/: ARTIFACT_CONTRACT.md  BINARY_FORMATS.md  CLI_CONTRACT.md  COMPLIANCE_CONTRACT.md  M1_SCOPE_CONTRACT.md  TERMINAL_EVENT_CONTRACT.md  TEST_GATE_CONTRACT.md  TRACEABILITY_MATRIX.md  implementationplan.md
vector_db_v3/gate_evidence/: CARD3_ROLLOUT_ROLLBACK.md  CARD4_ROLLOUT_ROLLBACK.md  CARD5_ROLLOUT_ROLLBACK.md  CARD6_ROLLOUT_ROLLBACK.md  CARD7_ROLLOUT_ROLLBACK.md  CARD8_ROLLOUT_ROLLBACK.md
vector_db_v3/gate_evidence/20260316T193736Z/: environment.json
vector_db_v3/gate_evidence/20260316T193801Z/: environment.json  gate_map.json  summary.json
vector_db_v3/gate_evidence/20260316T193801Z/G1/: result.json
vector_db_v3/gate_evidence/20260316T193801Z/G3/: result.json
vector_db_v3/gate_evidence/20260316T193801Z/G5/: result.json
vector_db_v3/gate_evidence/20260316T193801Z/G6/: result.json
vector_db_v3/gate_evidence/20260316T193801Z/G7/: result.json
vector_db_v3/gate_evidence/card1_baseline_before/perf/: environment.json  perf_metrics.json  raw_runs.json  result.json
vector_db_v3/gate_evidence/card1_postchange_minimal/: environment.json  summary.json
vector_db_v3/gate_evidence/card1_postchange_minimal/G1/: result.json
vector_db_v3/gate_evidence/card1_postchange_minimal/traceability/: result.json
vector_db_v3/gate_evidence/card2_postchange_minimal/: environment.json  gate_map.json  summary.json
vector_db_v3/gate_evidence/card2_postchange_minimal/G1/: result.json
vector_db_v3/gate_evidence/card4_validation/: card4_validation_summary.json
vector_db_v3/gate_evidence/card5_validation/: summary.json
vector_db_v3/include/vector_db_v3/: cuda_pipeline_context.hpp  ingest_pipeline.hpp  kmeans_backend.hpp  paths.hpp  status.hpp  telemetry.hpp  vector_store.hpp
vector_db_v3/include/vector_db_v3/codec/: artifacts.hpp  checksum.hpp  endian.hpp  io.hpp  types.hpp
vector_db_v3/scripts/: README.md  card3_residency_ab.py  check_reproducibility.py  gate_map_reference.json  perf_gate.py  pipeline_test.py  run_card10_validation.py  run_card2_downstream_stage_proof.sh  run_card2_tensor_proof.sh  run_card2_tensor_proof_mid.sh  run_card3_validation.sh  run_card4_validation.py  run_card5_validation.py  run_card6_validation.py  run_card7_validation.py  run_card8_validation.py  run_card9_validation.py  run_full_pipeline.py  run_full_pipeline_optimized.py  run_gates.py  smoke_scaffold.py  test_card10_metadata_overhead.py  test_card5_ingest_async.py  test_card6_single_process_pipeline.py  test_card7_wal_commit_policy.py  test_card8_post_ingest_checkpoint.py  test_card9_streaming_bulk_insert.py  test_cli_contract.py  test_terminal_event_contract.py  validate_card2_end_to_end.sh  verify_traceability.py
vector_db_v3/src/: ingest_pipeline.cpp  kmeans_backend_cpu.cpp  telemetry.cpp  vector_store.cpp
vector_db_v3/src/codec/: artifacts.cpp  checksum.cpp  io.cpp
vector_db_v3/src/cuda/: kmeans_kernels.cu  kmeans_kernels.hpp  kmeans_runtime.cpp  pipeline_context.cpp  tensor_distance.cu  tensor_distance.hpp  tensor_runtime.cpp  tensor_runtime.hpp
vector_db_v3/tests/: test_codec_artifacts.cpp  test_codec_corruption.cpp  test_codec_primitives.cpp  test_compliance_fail_fast.cpp  test_compliance_pass.cpp  test_durability_checkpoint.cpp  test_durability_corruption.cpp  test_durability_replay_crash.cpp  test_durability_wal.cpp  test_exact_search.cpp  test_final_layer_artifacts.cpp  test_final_layer_eligibility_reconciliation.cpp  test_gpu_residency.cpp  test_kmeans_backend_parity.cpp  test_kmeans_backend_selection.cpp  test_kmeans_tie_break_determinism.cpp  test_lower_layer_gate_artifacts.cpp  test_mid_layer_artifacts.cpp  test_precision_shard_alignment_failures.cpp  test_precision_shard_lifecycle.cpp  test_scaffold.cpp  test_top_layer_artifacts.cpp
(+109 files in other folders)
